Add errorprone as maven profile